--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
         <link href="favicon.ico" rel="shortcut icon" />
     </head>
     <body>
-        <h1>Denis Zaichenko CV</h1>
+        <h1 style="width:200px">Denis Zaichenko</h1>
+        <img src="photo.jpg" />
+        <form action="http://api.github.com" method="POST">
+            <input type="text" name="username"/>
+            <input type="password" name="password" />
+            <button>Save</button>
+        </form>
+        <hr />
+        <ul>
+            <li>
+                <strong>Email</strong>
+                <a href="mailto:denis.zaichenko@gmail.com">denis.zaichenko@gmail.com</a>
+            </li>
+            <li>
+                <strong>GitHub</strong>
+                <a href="https://github.com/MrZaYaC" target="_blank">MrZaYaC</a>
+            </li>
+        </ul>
+        <br>
+        <h2>Career objective</h2>
+        <p>
+            JavaScript Developer with 6+ years in web development.
+        </p>
+        <br>
+        <h2>Skills</h2>
+        <hr />
+        <ul>
+            <li>
+                HTML5(Pug), CSS3(Less, Stylus, SASS(SCSS)), JS(es5, es6)
+            </li>
+            <li>
+                Bootsrap, jQuery
+            </li>
+            <li>
+                Git, Linux, gulp, webpack, npm, bower
+            </li>
+        </ul>
+
+        
     </body>   
 </html>
